# model-socix

./: .clang-format  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  fix-compile-commands.sh  gdb.sh  shell.sh
cmake/: download_gtest.cmake  download_gtest.cmake.in
src/: CMakeLists.txt  main.cu  main_lib.cu  main_lib.cuh  main_lib_test.cu  main_test.cu
